// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EpisodeList > renders correctly with episodes (snapshot) 1`] = `
<div>
  <figure
    class="bg-gray-50 border-2 border-gray-200 shadow-xl p-4 mb-6"
    data-testid="podcast-count"
  >
    <h4
      class="text-xl"
    >
      2
       episodes
    </h4>
  </figure>
  <figure
    class="bg-gray-50 border-2 border-gray-200 shadow-xl p-4"
    data-testid="podcast-episodes"
  >
    <table
      class="w-full table-fixed"
    >
      <thead>
        <tr>
          <th
            colspan="8"
          >
            Title
          </th>
          <th>
            Date
          </th>
          <th>
            Duration
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Episode 1
          </td>
          <td>
            2023-08-29
          </td>
          <td>
            30:00
          </td>
        </tr>
        <tr>
          <td>
            Episode 2
          </td>
          <td>
            2023-08-28
          </td>
          <td>
            45:00
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</div>
`;

exports[`EpisodeList > renders correctly with no episodes (snapshot) 1`] = `
<div>
  <figure
    class="bg-gray-50 border-2 border-gray-200 shadow-xl p-4 mb-6"
    data-testid="podcast-count"
  >
    <h4
      class="text-xl"
    >
      0
       episodes
    </h4>
  </figure>
  <figure
    class="bg-gray-50 border-2 border-gray-200 shadow-xl p-4"
    data-testid="podcast-episodes"
  >
    <table
      class="w-full table-fixed"
    >
      <thead>
        <tr>
          <th
            colspan="8"
          >
            Title
          </th>
          <th>
            Date
          </th>
          <th>
            Duration
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-testid="app-message"
        >
          <td
            colspan="3"
          >
            No episodes :(
          </td>
        </tr>
      </tbody>
    </table>
  </figure>
</div>
`;
